--- a/src/app/order/DeatilOrder/detail-order/detail-order.component.html
+++ b/src/app/order/DeatilOrder/detail-order/detail-order.component.html
@@ -21,7 +21,7 @@
                     </h3>
                   </div>
                   <div class="mt-1 flex text-sm">
-                    <p class="text-gray-500">Description</p>
+                    <p class="text-gray-500">{{item.description}}</p>
                    
                   </div>
                  
