--- a/src/app/order/orders/orders.component.html
+++ b/src/app/order/orders/orders.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl mb-6">Orders</h1>
+<!-- <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl mb-6">Orders</h1> -->
 <div class="card">
 
   <div *ngIf="showErrorUpdateAlert" id="alert-border-2" class="fixed z-10 bottom-4 right-4 flex items-center p-4 mb-4 text-red-800 border-t-4 border-red-300 bg-red-50 dark:text-red-400 dark:bg-gray-800 dark:border-red-800" role="alert">
@@ -20,7 +20,7 @@
 
   
   
-  <div class="table-responsive text-nowrap">
+  <div class="table-responsive text-nowrap p-4">
     <table class="table">
       <thead class="table-light">
         <tr>
@@ -46,16 +46,32 @@
             <select [(ngModel)]="order.orderResponse.status" (change)="updateOrderStatus(order.orderResponse.orderId, order.orderResponse.status)" id="small"
               class="w-[150px] text-xs text-white border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               [ngClass]="{
-                'bg-green-500': order.orderResponse.status === 'Completed',
-                'bg-yellow-500': order.orderResponse.status === 'Processing',
-                'bg-orange-500': order.orderResponse.status === 'PENDING',
-                'bg-blue-500': order.orderResponse.status === 'SHIPPED',
-          'bg-red-500': order.orderResponse.status === 'CANCELLED'
+                'bg-green-100 text-green-800': order.orderResponse.status === 'Completed',
+                'bg-yellow-100 text-yellow-800': order.orderResponse.status === 'Processing',
+                
+                'bg-blue-100 text-blue-800': order.orderResponse.status === 'SHIPPED',
+                'bg-red-100 text-red-800': order.orderResponse.status === 'CANCELLED'
               }" [(ngModel)]="order.orderResponse.status">
               <option *ngFor="let status of orderStatuses" [value]="status">{{ status }}</option>
             </select>
 
           </td>
+         <!--  <td>
+            <span [ngClass]="{
+              'bg-green-100 text-green-800': order.orderResponse.status === 'Completed',
+              'bg-yellow-100 text-yellow-800': order.orderResponse.status === 'Processing',
+              'bg-orange-100 text-orange-800': order.orderResponse.status === 'PENDING',
+              'bg-blue-100 text-blue-800': order.orderResponse.status === 'SHIPPED',
+              'bg-red-100 text-red-800': order.orderResponse.status === 'CANCELLED'
+            }" class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full">
+              {{ order.orderResponse.status }}
+            </span>
+          </td> -->
+          
+          
+          
+          
+          
 
 
 
