--- a/src/app/dash-home/dash-home.component.html
+++ b/src/app/dash-home/dash-home.component.html
@@ -97,12 +97,12 @@
 <div class="container-fluid mt--7">
   <div class="row">
     <div class="col-xl-8 mb-5 mb-xl-0">
-      <div class="card bg-gradient-default shadow">
+      <div class="card bg-light shadow-sm">
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
-              <h6 class="text-uppercase text-light ls-1 mb-1">Overview</h6>
-              <h2 class="text-white mb-0">Sales value</h2>
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Overview</h6>
+              <h2 class="text-dark mb-0">Sales Value</h2>
             </div>
           </div>
         </div>
@@ -114,12 +114,12 @@
       </div>
     </div>
     <div class="col-xl-4">
-      <div class="card shadow">
+      <div class="card bg-light shadow-sm">
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
               <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
-              <h2 class="mb-0">Total orders</h2>
+              <h2 class="text-dark mb-0">Total Orders</h2>
             </div>
           </div>
         </div>
@@ -131,6 +131,9 @@
       </div>
     </div>
   </div>
+  
+  
+  
   
   
   <div class="row mt-5">
