--- a/src/app/product/products/products.component.html
+++ b/src/app/product/products/products.component.html
@@ -106,7 +106,7 @@
             <strong>{{ product.name }}</strong>
           </td>
 
-          <td><img [src]="product.imageUrl" width="50" height="50"></td>
+          <td><img  [src]="(product?.imageUrl)" width="50" height="50"></td>
           <td>{{ product.price }} MAD</td>
           <td>{{ product.timeToPrepareInMinute }}</td>
           <td>
