--- a/src/app/dash-home/dash-home.component.html
+++ b/src/app/dash-home/dash-home.component.html
@@ -9,7 +9,7 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                  <span class="h2 font-weight-bold mb-0">350,897</span>
+                  <span class="h2 font-weight-bold mb-0"><span class="text-xs text-gray-500">MAD</span> {{ totalSales }}</span>
                 </div>
                 <div class="col-auto">
                   <div class="badge rounded-pill bg-label-primary me-3 p-2">
@@ -145,7 +145,7 @@
               <h3 class="mb-0">Recent Orders</h3>
             </div>
             <div class="col text-right">
-              <a routerLink="/Orders" class="btn btn-sm btn-primary">See all</a>
+              <a routerLink="../orders" class="btn btn-sm btn-primary">See all</a>
             </div>
           </div>
         </div>
@@ -191,7 +191,7 @@
               <h3 class="mb-0">Popular Products</h3>
             </div>
             <div class="col text-right">
-              <a routerLink="/products" class="btn btn-sm btn-primary">See all</a>
+              <a routerLink="../products" class="btn btn-sm btn-primary">See all</a>
             </div>
           </div>
         </div>
@@ -200,7 +200,7 @@
             <img [src]="product.imageUrl" class="rounded-circle" width="50" height="50" alt="{{ product.name }}">
             <div class="ml-3">
               <h5 class="mb-0">{{ product.name }}</h5>
-              <p class="text-muted mb-0">{{ product.price }} MAD</p>
+              <p class="text-muted mb-0">MAD {{ product.price }} </p>
             </div>
           </div>
         </div>
