--- a/src/app/product/products/products.component.html
+++ b/src/app/product/products/products.component.html
@@ -86,8 +86,9 @@
     <table class="table">
       <thead class="table-light">
         <tr>
-          <th><input type="checkbox" (change)="toggleSelectAll($event)" class="w-5 h-5 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-            </th>
+          <th>
+            <input id="selectAllCheckbox" type="checkbox" (change)="toggleSelectAll($event)" class="w-5 h-5 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+          </th>
           <th>Product ID</th>
           <th>Name</th>
           <th>Image</th>
@@ -100,14 +101,16 @@
       <tbody class="table-border-bottom-0">
         <tr *ngFor="let product of paginatedProducts">
           
-          <td><input type="checkbox" [checked]="isSelected(product.id)" (change)="toggleSelectProduct($event, product.id)" class="w-5 h-5 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"></td>
+          <td>
+            <input type="checkbox" [checked]="isSelected(product.id)" (change)="toggleSelectProduct($event, product.id)" class="w-5 h-5 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+          </td>
           <td>{{product.id}}</td>
           <td>
             <strong>{{ product.name }}</strong>
           </td>
 
           <td><img  [src]="(product?.imageUrl)" width="50" height="50"></td>
-          <td>{{ product.price }} MAD</td>
+          <td>{{ product.price }} DH</td>
           <td>{{ product.timeToPrepareInMinute }}</td>
           <td>
             <span [ngClass]="{
